--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "dotenv": "^10.0.0",
+    "ioredis": "^4.28.2",
     "mongoose": "^6.0.15",
     "mssql": "^7.3.0",
+    "redis": "^3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0",
     "typeorm": "^0.2.41"
@@ -51,6 +53,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.3",
     "@types/node": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
