--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:prod": "env NODE_ENV=production node dist/index.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "make": "chmod +x ./make.sh && bash make.sh",
-    "prepare": "husky install"
+    "prepare:husky": "husky install"
   },
   "husky": {
     "hooks": {
