--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-parameter-decorator": "^1.0.16",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
