--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.2",
     "dotenv": "^10.0.0",
+    "helmet": "^4.6.0",
     "ioredis": "^4.28.2",
     "mongoose": "^6.0.15",
     "mssql": "^7.3.0",
@@ -57,6 +58,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
     "@types/ioredis": "^4.28.3",
     "@types/node": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
