--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     }
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.3",
     "@nestjs/cli": "^8.1.6",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.2",
     "dotenv": "^10.0.0",
@@ -56,6 +58,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cron": "^1.7.3",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
