--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/axios": "^0.14.0",
     "@types/cron": "^1.7.3",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
