--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "@nestjs/schedule": "^1.0.2",
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^8.0.2",
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "helmet": "^4.6.0",
     "ioredis": "^4.28.2",
     "mongoose": "^6.0.15",
-    "mssql": "^7.3.0",
+    "mssql": "7.2.1",
     "redis": "^3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
